  Fix bug 911966 - gr3-b19 doesn't playback User-Agent: header.
  Thanks to Koen Debruyckere for the timely reports.

  Simplify HTTPRequest API slightly by removing some redundant
  overloaded methods and ordering parameters for consistently.

  Other fixes to HTTPRequest:
   - DELETE() mistakenly invoked a Trace() method.
   - GET() and OPTIONS() could pass header values to query strings.


Grinder 3.0-beta19
------------------

  Removed redundant getLogger() and getFilenameFactory() from
  PluginProcessContext and PluginThreadContext. Plug-ins can get these
  services from the script context object and share them with worker
  threads.

  The PluginRegistry.register() method now takes an instance of
  GrinderPlugin, rather than a class that implements GrinderPlugin,
  and no longer returns a PluginProcessContext.

  Fix bug 820481 - StringIndexOutOfBoundsException when logging.
  Thanks to Dragos Cernahoschi and Gordon Reid for reports.

  Fix bug 805013 - mean time is not correct. Thanks to all who
  reported this, and to Jan Wilmaers and Bart Bauwens for their
  investigation and analysis.

  HTTP response errors statistic from John Stanford White.

  Added a processResponse method to HTTPRequest so that scripts
  subclasses can process respones.

  The console can now be set to start as soon as the first worker
  process starts its threads. ("Ignore 0 samples").


Grinder 3.0-beta18
------------------

  Fix console column header resizing by working around Java bug
  4760433.

  Fix the TCPProxy SSL support that I inadvertently broke in beta 17.

  Allow the console Look and Feel to be changed.

  HTTPPlugin updates from Bertrand:

   - Provide access to HTTPClient content and transfer decoding
   support.

   - Minor updates to HTTPPluginTCPProxyFilter2.

  Remove the Sniffer web app.

  Fail hard if script attempts to register detail statistics view from
  worker thread.

  Support scripts that sleep outside of worker threads.
